Fix styling/overflow issue

--- a/app/floskl/static/style.css
+++ b/app/floskl/static/style.css
@@ -3,6 +3,7 @@ html {
   background-image: linear-gradient(to bottom right, rgb(231, 247, 221), rgb(154, 173, 150));
   padding: .5rem;
   margin: 0;
+  overflow-y: auto;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
   background-image: linear-gradient(to bottom right, rgb(236, 248, 229), rgb(180, 195, 178));
   height: calc(100vh - 2rem);
   font-size: min(30px, calc(8px + 3vw));
+  overflow-y: auto;
 }
 
 h1 {
